Add links for sections

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                                 <a class="header-link" href="./blog.html">Blog</a>
                             </li>
                             <li class="header-item">
-                                <a class="header-link" href="./contact.html">Kontaktlar</a>
+                                <a class="header-link" href="#site-footer">Kontaktlar</a>
                             </li>
                         </ol>
                     </nav>
@@ -61,7 +61,7 @@
                             olib chiqing</h1>
                         <p>Nullam laoreet nec turpis et ultrices. Duis sit amet quam arcu. Nam facilisis lacinia ex,
                             eget sollicitudin massa pellentesque in. Vivamus mattis eros at sem pulvinar</p>
-                        <a class="hero-part-link site-links" href="./service.html">Xizmatlar bilan tanishish</a>
+                        <a class="hero-part-link site-links" href="#service">Xizmatlar bilan tanishish</a>
                     </div>
                     <iframe class="hero-part-iframe" width="458" height="258"
                         src="https://www.youtube.com/embed/6_pru8U2RmM" title="YouTube video player"
@@ -124,7 +124,7 @@
                         </li>
                     </ul>
                     <div class="service-link-box">
-                        <a class="service-part-link site-links" href="#">Buyurtma berish</a>
+                        <a class="service-part-link site-links" href="#order">Buyurtma berish</a>
                         <a class="service-page-link" href="./service.html">Xizmatlar sahifasiga o’tish</a>
                     </div>
                 </div>
@@ -174,7 +174,7 @@
                         </li>
                     </ol>
                     <div class="how-we-work-link-box">
-                        <a class="how-we-work-link site-links" href="#">Buyurtma berish</a>
+                        <a class="how-we-work-link site-links" href="#order">Buyurtma berish</a>
                     </div>
                 </div>
             </div>
@@ -215,7 +215,7 @@
     <!-- End of Main Section -->
 
     <!-- Footer Section -->
-    <footer>
+    <footer id="site-footer">
         <div class="container">
             <div class="footer-part">
                 <div class="footer-info">
