Add AOS to some boxes

--- a/index.html
+++ b/index.html
@@ -160,31 +160,31 @@
                             eget sollicitudin massa pellentesque in. Vivamus mattis eros at sem pulvinar</p>
                     </div>
                     <ol class="how-we-work-list">
-                        <li class="how-we-work-item demand-item">
+                        <li class="how-we-work-item demand-item" data-aos="fade-right">
                             <div class="how-we-work-item-text demand-text">
                                 <h3>Talablarni aniqlab chiqamiz</h3>
                                 <p>Nullam laoreet nec turpis et ultrices. Duis sit amet quam arcu. Nam facilisis</p>
                             </div>
                         </li>
-                        <li class="how-we-work-item offer-item">
+                        <li class="how-we-work-item offer-item" data-aos="fade-left">
                             <div class="how-we-work-item-text">
                                 <h3>Bir necha yechimlarni taklif qilamiz</h3>
                                 <p>Nullam laoreet nec turpis et ultrices. Duis sit amet quam arcu. Nam facilisis</p>
                             </div>
                         </li>
-                        <li class="how-we-work-item time-item">
+                        <li class="how-we-work-item time-item" data-aos="fade-right">
                             <div class="how-we-work-item-text">
                                 <h3>Loyiha uchun vaqt belgilaymiz</h3>
                                 <p>Nullam laoreet nec turpis et ultrices. Duis sit amet quam arcu. Nam facilisis</p>
                             </div>
                         </li>
-                        <li class="how-we-work-item quality-item">
+                        <li class="how-we-work-item quality-item" data-aos="fade-left">
                             <div class="how-we-work-item-text">
                                 <h3>A’lo sifat bilan bajarib topshiramiz</h3>
                                 <p>Nullam laoreet nec turpis et ultrices. Duis sit amet quam arcu. Nam facilisis</p>
                             </div>
                         </li>
-                        <li class="how-we-work-item support-item">
+                        <li class="how-we-work-item support-item" data-aos="fade-right">
                             <div class="how-we-work-item-text">
                                 <h3>Qo’llab-quvvatlab boramiz</h3>
                                 <p>Nullam laoreet nec turpis et ultrices. Duis sit amet quam arcu. Nam facilisis</p>
