--- a/service.html
+++ b/service.html
@@ -68,7 +68,7 @@
             <div class="container">
                 <div class="service-type-part">
                     <ul class="service-type-list">
-                        <li class="service-type-item">
+                        <li class="service-type-item" data-aos="zoom-in">
                             <div class="service-type-item-info">
                                 <h3>Sayt tuzish</h3>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pretium orci nec neque
@@ -87,7 +87,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="service-type-item">
+                        <li class="service-type-item" data-aos="zoom-in">
                             <div class="service-type-item-info">
                                 <h3>Telegram bot tuzish</h3>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pretium orci nec neque
@@ -108,7 +108,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="service-type-item">
+                        <li class="service-type-item" data-aos="zoom-in">
                             <div class="service-type-item-info">
                                 <h3>SMM</h3>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pretium orci nec neque
@@ -127,7 +127,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="service-type-item">
+                        <li class="service-type-item" data-aos="zoom-in">
                             <div class="service-type-item-info">
                                 <h3>Grafik dizayn</h3>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pretium orci nec neque
@@ -145,7 +145,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="service-type-item">
+                        <li class="service-type-item" data-aos="zoom-in">
                             <div class="service-type-item-info">
                                 <h3>CRM tizimlar</h3>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pretium orci nec neque
@@ -255,6 +255,13 @@
         </div>
     </footer>
     <!-- End of Footer Section -->
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init({
+            duration: 2400,
+        });
+    </script>
 </body>
 
 </html>
